Premios Oficiais Adicionado

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                     <li><a href="#sobre" class="nav-link" data-i18n="nav.about">Sobre</a></li>
                     <li><a href="#skills" class="nav-link" data-i18n="nav.skills">Skills</a></li>
                     <li><a href="#certificacoes" class="nav-link" data-i18n="nav.certifications">Certificações</a></li>
+                    <li><a href="#premios-oficiais" class="nav-link" data-i18n="nav.awards">Prêmios</a></li>
+                    <li><a href="#reconhecimentos" class="nav-link" data-i18n="nav.recognitions">Reconhecimentos</a></li>
                     <li><a href="#projetos" class="nav-link" data-i18n="nav.projects">Projetos</a></li>
                     <li><a href="#midia" class="nav-link" data-i18n="nav.media">Mídia</a></li>
                 </ul>
@@ -386,7 +388,7 @@
                                 <i class="fas fa-medal"></i>
                                 <div class="award-text">
                                     <h4 data-i18n="projects.award">7º LUGAR - FETEPS (2025)</h4>
-                                    <p data-i18n="projects.award_desc">A maior feira de tecnologia pública da América Latina, reunindo inovações e projetos transformadores do Brasil</p>
+                                    <p data-i18n-html="projects.award_desc">A maior feira de tecnologia pública da <span class="award-glow">América Latina</span>, reunindo inovações e projetos transformadores do Brasil</p>
                                 </div>
                             </div>
                         </div>
@@ -493,7 +495,78 @@
     </section>
 
     <!-- Reconhecimentos -->
-    <section id="reconhecimentos" class="recognitions">
+    <section id="premios-oficiais" class="awards">
+        <div class="container">
+            <div class="section-header">
+                <h2 data-i18n="awards.title">Prêmios Oficiais</h2>
+                <div class="line"></div>
+                <p class="section-subtitle" data-i18n="awards.subtitle">Conquistas registradas oficialmente em eventos acadêmicos e esportivos.</p>
+            </div>
+            <div class="awards-list">
+                <article class="award-card">
+                    <div class="award-header">
+                        <span class="award-rank" data-i18n="awards.a1.rank">1º Lugar</span>
+                        <span class="award-date" data-i18n="awards.a1.date">out 2025</span>
+                    </div>
+                    <h3 data-i18n="awards.a1.title">Votação popular de melhor projeto da 6ª FETEC</h3>
+                    <p class="award-meta" data-i18n="awards.a1.meta">Concedido por Etec de Registro</p>
+                    <p data-i18n="awards.a1.desc">Projeto WACS — Autonomia Inteligente para PCD’s. Reconhecimento pelo impacto social e inovação.</p>
+                </article>
+
+                <article class="award-card">
+                    <div class="award-header">
+                        <span class="award-rank" data-i18n="awards.a2.rank">7º Lugar</span>
+                        <span class="award-date" data-i18n="awards.a2.date">out 2025</span>
+                    </div>
+                    <h3 data-i18n="awards.a2.title">16ª FETEPS — Melhor Projeto</h3>
+                    <p class="award-meta" data-i18n="awards.a2.meta">Concedido por Centro Paula Souza</p>
+                    <p data-i18n="awards.a2.desc">Representante do WACS da Etec de Registro no maior evento acadêmico de tecnologia e inovação do Brasil.</p>
+                </article>
+
+                <article class="award-card">
+                    <div class="award-header">
+                        <span class="award-rank" data-i18n="awards.a3.rank">1º Lugar</span>
+                        <span class="award-date" data-i18n="awards.a3.date">out 2024</span>
+                    </div>
+                    <h3 data-i18n="awards.a3.title">Votação popular de melhor projeto da 5ª FETEC</h3>
+                    <p class="award-meta" data-i18n="awards.a3.meta">Concedido por Etec de Registro</p>
+                    <p data-i18n="awards.a3.desc">Projeto “Educação Sexual”. Reconhecimento pela relevância e impacto na comunidade.</p>
+                </article>
+
+                <article class="award-card">
+                    <div class="award-header">
+                        <span class="award-rank" data-i18n="awards.a4.rank">1º Lugar</span>
+                        <span class="award-date" data-i18n="awards.a4.date">set 2024</span>
+                    </div>
+                    <h3 data-i18n="awards.a4.title">Campeonato Brasileiro de Fisiculturismo</h3>
+                    <p class="award-meta" data-i18n="awards.a4.meta">Categoria Men’s Physique Sub Junior até 18 anos</p>
+                    <p data-i18n="awards.a4.desc">Campeão no 7º Campeonato Brasileiro. Local: Osasco-SP.</p>
+                </article>
+
+                <article class="award-card">
+                    <div class="award-header">
+                        <span class="award-rank" data-i18n="awards.a5.rank">2º Lugar</span>
+                        <span class="award-date" data-i18n="awards.a5.date">set 2023</span>
+                    </div>
+                    <h3 data-i18n="awards.a5.title">Torneio Estadual de RoboCode</h3>
+                    <p class="award-meta" data-i18n="awards.a5.meta">Concedido por Robótica Paula Souza</p>
+                    <p data-i18n="awards.a5.desc">Destaque em programação e estratégia de robôs na competição estadual.</p>
+                </article>
+
+                <article class="award-card">
+                    <div class="award-header">
+                        <span class="award-rank" data-i18n="awards.a6.rank">1º Lugar</span>
+                        <span class="award-date" data-i18n="awards.a6.date">ago 2023</span>
+                    </div>
+                    <h3 data-i18n="awards.a6.title">Campeonato de RoboCode (ETEC Registro)</h3>
+                    <p class="award-meta" data-i18n="awards.a6.meta">Concedido por Etec Registro</p>
+                    <p data-i18n="awards.a6.desc">Classificação para representar a instituição na fase regional.</p>
+                </article>
+            </div>
+        </div>
+    </section>
+
+<section id="reconhecimentos" class="recognitions">
         <div class="container">
             <div class="section-header">
                 <h2 data-i18n="recognitions.title">Reconhecimentos</h2>
@@ -787,6 +860,9 @@
         </div>
     </section>
 
+    <!-- Prêmios Oficiais -->
+    
+
     <!-- Contato -->
     <section id="contato" class="contact">
         <div class="container">
@@ -873,6 +949,8 @@
                         <a href="#sobre" class="footer-link">Sobre Mim</a>
                         <a href="#skills" class="footer-link">Skills</a>
                         <a href="#certificacoes" class="footer-link">Certificações</a>
+                        <a href="#premios-oficiais" class="footer-link">Prêmios Oficiais</a>
+                        <a href="#reconhecimentos" class="footer-link">Reconhecimentos</a>
                         <a href="#projetos" class="footer-link">Projetos</a>
                         <a href="#midia" class="footer-link">Mídia</a>
                     </div>
